--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -68,7 +68,7 @@
     <link href="../css/other.css" rel="stylesheet" type="text/css" />
 
     <link href="../css/bootstrap-3.1.1/css/bootstrap.min.css" type="text/css" rel="stylesheet">
-    <link href="../css/virkailija-valintaperusteet.css" rel="stylesheet" type="text/css"/>
+    <link href="../css/virkailija.css" rel="stylesheet" type="text/css"/>
 
 </head>
 <body>
