Lisätty UI:hin mahdollisuus valita lähetetäänkö koekutsut (VT-763)

--- a/src/main/webapp/html/valintakoelomake.html
+++ b/src/main/webapp/html/valintakoelomake.html
@@ -23,6 +23,13 @@
         <div class="form-row-content">
             <textarea name="kuvaus" ng-model="model.valintakoe.kuvaus"/>
         </div>
+        <div class="clear"></div>
+
+        <label class="form-row-label" for="lahetetaankoKoekutsut">Lähetetäänkö koekutsut</label>
+
+        <div class="form-row-content">
+            <input type="checkbox" name="lahetetaankoKoekutsut" ng-model="model.valintakoe.lahetetaankoKoekutsut" />
+        </div>
     </div>
 
 
