--- a/src/main/webapp/html/laskentakaava/laskentakaavalista.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalista.html
@@ -12,7 +12,7 @@
 
 
     <h2>Laskentakaavalista</h2>
-    <span ng-click="createKaava()" class="button small"><i class="fa fa-plus"></i> Laskentakaava</span>
+    <span ng-click="createKaava()" class="btn btn-sm btn-default"><i class="fa fa-plus"></i> Laskentakaava</span>
 
 
     <div ng-show="showForm">
@@ -98,12 +98,9 @@
         </div>
     </div>
 
-    <div class="width-60">
-        <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()"><i
-                class="fa fa-arrow-left"></i> Takaisin
-        </button>
-    </div>
 
-    <div class="clear"></div>
+    <button type="button" class="btn btn-sm btn-default" ng-click="cancel()"><i
+            class="fa fa-arrow-left"></i> Takaisin
+    </button>
 
 </div>
