--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -12,8 +12,8 @@
 <div class="tabsheets">
 
     <!-- LASKENTAKAAVAN MUOKKAUS -->
-    <span class="button small" ng-click="goToListing()"><i class="fa fa-arrow-left"></i> Palaa</span>
-    <span class="button small" ng-click="persistLaskentakaava()"><i class="fa fa-floppy-o"></i> Tallenna</span>
+    <span class="btn btn-sm btn-default" ng-click="goToListing()"><i class="fa fa-arrow-left"></i> Palaa</span>
+    <span class="btn btn-sm btn-default" ng-click="persistLaskentakaava()"><i class="fa fa-floppy-o"></i> Tallenna</span>
 
     <!--
     <span class="button small" ng-click="saveKaavaAsDraft()"><i class="fa fa-floppy-o"></i> Tallenna luonnoksena</span>
