--- a/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavamenu.html
@@ -325,7 +325,7 @@
             <div class="clear"></div>
         </div>
         
-        <span class="button small" ng-click="removeFunktiokutsu()"><i class="fa fa-trash-o"></i> Poista funktiokutsu</span>
+        <span class="btn btn-sm btn-default" ng-click="removeFunktiokutsu()"><i class="fa fa-trash-o"></i> Poista funktiokutsu</span>
 
     </div>
 
