funktiokutsujen syoteparametrilista generoidaan funktiokuvauksesta, eikä tallennetusta objektista

--- a/src/main/webapp/html/laskentakaava/laskentakaavalista.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalista.html
@@ -45,8 +45,8 @@
                 <div class="clear"></div>
             </div>
             <div class="form-row">
-                <span class="button small" ng-click="cancelEdit(kaava)"><i class="fa fa-arrow-left"></i> Peruuta</span>
-                <button class="button small primary"
+                <span class="btn btn-sm btn-default" ng-click="cancelEdit(kaava)"><i class="fa fa-arrow-left"></i> Peruuta</span>
+                <button class="btn btn-sm btn-primary"
                         ng-click="saveKaava(kaava)"
                         ng-disabled="kaavaForm.$invalid"><i class="fa fa-floppy-o"></i> Tallenna
                 </button>
