ovt-7101: bootstrapin käyttöönoton myötä label-classit täytyy vaihtaa node-classeiksi listoissa

--- a/src/main/webapp/html/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/html/valintaryhmalomake_uusi.html
@@ -72,8 +72,8 @@
         </div>
 
         <div class="grid16-16">
-            <button auth="crud" ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
-            <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
+            <button auth="crud" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
+            <button type="button" class="btn btn-sm btn-primary" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
         </div>
         <div class="clear"></div>
     </form>
