--- a/src/main/webapp/html/laskentakaava/laskentakaavalista.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalista.html
@@ -61,7 +61,7 @@
             <div ng-repeat="valintaryhma in valintaryhmaList">
                 <h3>{{valintaryhma.nimi}}</h3>
 
-                <div class="notification info margin-bottom-2"
+                <div class="alert alert-info margin-bottom-2"
                      ng-show="!valintaryhma.laskentakaavat || valintaryhma.laskentakaavat.length == 0">
                     <p ng-show="!valintaryhma.oid">Yhtään laskentakaavaa ei ole luotu.</p>
 
