--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -20,7 +20,7 @@
 
     <div class="clear"></div>
 
-    <div class="notification warning margin-top-2" ng-show="errors.length > 0">
+    <div class="alert alert-danger margin-top-2" ng-show="errors.length > 0">
         <p ng-if="errors">Laskentakaavassa on virheitä, tarkista että olet täyttänyt kaikki pakolliset kentät</p>
     </div>
 
