valintaperusteisiin bowerilla haettavat fronttidependencyt

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -5,19 +5,18 @@
     <title>Valintaperusteiden mallinnus</title>
     
     <!-- libs -->
-    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery-2.1.0.min.js"></script>
-    <script type="text/javascript" src="../jslib/jquery-ui-1.9.2/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../jslib/jquery.min.js"></script>
+    <script type="text/javascript" src="../jslib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="../jslib/underscore.js"></script>
+    <script type="text/javascript" src="../jslib/angular.min.js"></script>
+    <script type="text/javascript" src="../jslib/angular-resource.min.js"></script>
+    <script type="text/javascript" src="../jslib/angular-route.min.js"></script>
+    <script type="text/javascript" src="../jslib/angular-animate.min.js"></script>
+    <script type="text/javascript" src="../jslib/static/jquery.nestable.js"></script>
+    <script type="text/javascript" src="../jslib/static/jquery.mjs.nestedSortable.js"></script>
+    <script type="text/javascript" src="../jslib/ui-bootstrap-tpls.min.js"></script>
+
     <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.i18n.properties-min-1.0.9.min.js"></script>
-
-    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.nestable.js"></script>
-    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.mjs.nestedSortable.js"></script>
-    <script type="text/javascript" src="../jslib/lodash.js"></script>
-
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular.min.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-resource.min.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-route.min.js"></script>
-    <script type="text/javascript" src="../jslib/ui-boostrap-tpls-0.7.0.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.10/angular-animate.min.js"></script>
 
 
     <!--conf -->
